--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.22.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
     "web-vitals": "^2.1.4"
